// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does the <Navigation /> render at desktop properly? matches snapshot 1`] = `
<nav>
  <ul
    className="mainNavigation"
  >
    <li>
      <a
        href="/about"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        className="active"
        href="/directions"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Directions
      </a>
    </li>
    <li>
      <a
        href="/things-to-do"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Things to do
      </a>
    </li>
    <li>
      <a
        href="/photo-gallery"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Photo Gallery
      </a>
    </li>
    <li>
      <a
        href="/contact"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Does the <Navigation /> render at mobile properly? matches snapshot 1`] = `
<nav>
  <div
    className="mobileNavWrapperClosed"
  >
    <a
      className="mobileMenu"
      href="#"
      onClick={[Function]}
    >
      <span
        className="mobileNavBar"
      />
      <span
        className="mobileNavBar"
      />
      <span
        className="mobileNavBar"
      />
    </a>
  </div>
  <ul
    className="mainNavigationClosed"
  >
    <li>
      <a
        href="/about"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        className="active"
        href="/directions"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Directions
      </a>
    </li>
    <li>
      <a
        href="/things-to-do"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Things to do
      </a>
    </li>
    <li>
      <a
        href="/photo-gallery"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Photo Gallery
      </a>
    </li>
    <li>
      <a
        href="/contact"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;
